fix math in theory only

--- a/synapse_SNR_theory_only.ipynb
+++ b/synapse_SNR_theory_only.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f735443428f2496123a2cbad36e9527d94301dab8460ee38ef2b6953f2cd5288"
+  "signature": "sha256:31ac2215981637ade2b27db4e117cee4a40ea36d430aa779ecaa85862b8b9cfe"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -151,7 +151,7 @@
      "source": [
       "By definition, \n",
       "\n",
-      "$$Var(X) = E[X^2] - E[X]^2$$\n",
+      "$$\\operatorname{Var}(X) = E[X^2] - E[X]^2$$\n",
       "\n",
       "We've determined $E[X]$ already, so let's look at $E[X^2]$."
      ]
@@ -190,9 +190,10 @@
       " \\frac{1}{\\tau}E\\left[\\sum_{i=0}^{N-1}\\frac{1}{\\tau}e^{-2t_i/\\tau}\\right] \\\\\n",
       " &= \\frac{1}{\\tau}E\\left[E\\left[\\sum_{i=0}^{N-1}\\frac{1}{\\tau}e^{-2t_i/\\tau}\\bigg|N\\right]\\right] \\\\\n",
       " &= \\frac{1}{\\tau}E[N]E\\left[\\frac{1}{\\tau}e^{-2t_i/\\tau}\\right] \\\\\n",
-      " &= \\frac{1}{\\tau}(\\lambda k\\tau)\\int_0^{k\\tau}\\frac{1}{\\tau}e^{-2t_i/\\tau}dt_i \\\\\n",
-      " &= \\frac{\\lambda k}{2}\\left(1-e^{-2k\\tau/\\tau}\\right) \\\\\n",
-      " &= \\frac{\\lambda k}{2}\\left(1-e^{-2k}\\right) \\\\\n",
+      " &= \\frac{1}{\\tau}(\\lambda k\\tau)\\int_0^{k\\tau}\\frac{1}{k\\tau}\\frac{1}{\\tau}e^{-2t_i/\\tau}dt_i \\\\\n",
+      " &= \\frac{\\lambda}{\\tau}\\int_0^{k\\tau}\\frac{1}{\\tau}e^{-2t_i/\\tau}dt_i \\\\\n",
+      " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2k\\tau/\\tau}\\right) \\\\\n",
+      " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2k}\\right) \\\\\n",
       "\\end{aligned}"
      ]
     },
@@ -214,10 +215,10 @@
       "  &= E\\left[\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right]\\right] \\\\\n",
       "  &= E\\left[\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}1\\right]E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] \\\\\n",
       "  &= E\\left[N^2-N\\right]E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] \\\\\n",
-      "  &= E\\left[N^2-N\\right]E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\right]E\\left[\\frac{1}{\\tau}e^{-t_j/\\tau}\\right]\n",
+      "  &= \\left(E\\left[N^2\\right]-E[N]\\right)E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\right]E\\left[\\frac{1}{\\tau}e^{-t_j/\\tau}\\right]\n",
       "   \\quad i\\neq j \\text{ so } t_i, t_j \\text{ are independent} \\\\\n",
-      "  &= \\left(E\\left[N^2\\right]-E[N]\\right)\\left(1-e^{-k}\\right)\\left(1-e^{-k}\\right) \\\\\n",
-      "  &= \\left(E\\left[N^2\\right]-E[N]\\right)\\left(1-e^{-k}\\right)^2 \\\\\n",
+      "  &= \\left(E\\left[N^2\\right]-E[N]\\right)\\frac{1}{k\\tau}\\left(1-e^{-k}\\right)\\frac{1}{k\\tau}\\left(1-e^{-k}\\right) \\\\\n",
+      "  &= \\left(E\\left[N^2\\right]-E[N]\\right)\\frac{1}{k^2\\tau^2}\\left(1-e^{-k}\\right)^2 \\\\\n",
       "\\end{aligned}"
      ]
     },
@@ -225,7 +226,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "For poisson random variable $N$ with parameter $\\lambda k\\tau$, $Var(N)=E[N]=\\lambda k\\tau$"
+      "For poisson random variable $N$ with parameter $\\lambda k\\tau$, $\\operatorname{Var}(N)=E[N]=\\lambda k\\tau$"
      ]
     },
     {
@@ -252,10 +253,10 @@
      "source": [
       "\\begin{aligned}\n",
       "E\\left[\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] &=\n",
-      "    \\left(E\\left[N^2\\right]-E[N]\\right)\\left(1-e^{-k}\\right)^2 \\\\\n",
-      " &= \\left(\\lambda k\\tau + (\\lambda k\\tau)^2 - \\lambda k\\tau\\right)\\left(1-e^{-k}\\right)^2 \\\\\n",
-      " &= \\left(\\lambda k\\tau\\right)^2\\left(1-e^{-k}\\right)^2 \\\\\n",
-      " &= \\left(\\lambda k\\tau\\right)^2\\left(1-e^{-k}\\right)^2 \\\\\n",
+      "    \\left(E\\left[N^2\\right]-E[N]\\right)\\frac{1}{k^2\\tau^2}\\left(1-e^{-k}\\right)^2 \\\\\n",
+      " &= \\left(\\lambda k\\tau + (\\lambda k\\tau)^2 - \\lambda k\\tau\\right)\\frac{1}{k^2\\tau^2}\\left(1-e^{-k}\\right)^2 \\\\\n",
+      " &= \\left(\\lambda k\\tau\\right)^2\\frac{1}{k^2\\tau^2}\\left(1-e^{-k}\\right)^2 \\\\\n",
+      " &= \\lambda^2\\left(1-e^{-k}\\right)^2 \\\\\n",
       "\\end{aligned}"
      ]
     },
@@ -271,9 +272,9 @@
      "metadata": {},
      "source": [
       "\\begin{aligned}\n",
-      "E\\left[X^2\\right] &= + E\\left[\\frac{1}{\\tau}\\sum_{i=0}^{N-1}\\frac{1}{\\tau}e^{-2t_i/\\tau}\\right] +\n",
+      "E\\left[X^2\\right] &= E\\left[\\frac{1}{\\tau}\\sum_{i=0}^{N-1}\\frac{1}{\\tau}e^{-2t_i/\\tau}\\right] +\n",
       "    E\\left[\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] \\\\\n",
-      " &= \\frac{\\lambda k}{2}\\left(1-e^{-2k}\\right) + \\left(\\lambda k\\tau\\right)^2\\left(1-e^{-k}\\right)^2\n",
+      " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2k}\\right) + \\lambda^2\\left(1-e^{-k}\\right)^2\n",
       "\\end{aligned}"
      ]
     },
@@ -289,12 +290,12 @@
      "metadata": {},
      "source": [
       "\\begin{aligned}\n",
-      "Var(X) &= E[X^2] - E[X]^2 \\\\\n",
-      " &= \\frac{\\lambda k}{2}\\left(1-e^{-2k}\\right) + \\left(\\lambda k\\tau\\right)^2\\left(1-e^{-k}\\right)^2 \n",
+      "\\operatorname{Var}(X) &= E[X^2] - E[X]^2 \\\\\n",
+      " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2k}\\right) + \\lambda^2\\left(1-e^{-k}\\right)^2 \n",
       "    - \\left(\\lambda \\left(1-e^{-k}\\right)\\right)^2 \\\\\n",
-      " &= \\frac{\\lambda k}{2}\\left(1-e^{-2k}\\right) + \\left(\\lambda k\\tau\\right)^2\\left(1-e^{-k}\\right)^2 \n",
-      "    - \\lambda^2 \\left(1-e^{-k}\\right)^2 \\\\\n",
-      " &= \\frac{\\lambda k}{2}\\left(1-e^{-2k}\\right) + \\lambda^2\\left(1-e^{-k}\\right)^2\\left(k^2\\tau^2-1\\right)^2\n",
+      " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2k}\\right) + \\lambda^2\\left(1-e^{-k}\\right)^2 \n",
+      "    - \\lambda^2\\left(1-e^{-k}\\right)^2 \\\\\n",
+      " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2k}\\right) \\\\\n",
       "\\end{aligned}"
      ]
     },
@@ -302,7 +303,17 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Taking the limit of $k$ as $k$ tends to infinity does not converge."
+      "Taking the limit of $k$ as $k$ tends to infinity yields"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "\\begin{align}\n",
+      "\\lim_{k\\rightarrow\\infty}\\operatorname{Var}(X) &= \\lim_{k\\rightarrow\\infty} \\frac{\\lambda}{2\\tau}\\left(1-e^{-2k}\\right) \\\\\n",
+      " &= \\frac{\\lambda}{2\\tau}\n",
+      "\\end{align}"
      ]
     },
     {
@@ -319,26 +330,9 @@
      "source": [
       "\\begin{aligned}\n",
       "SNR &= \\frac{\\mu}{\\sigma} \\\\\n",
-      " &= \\frac{\\lambda \\left(1-e^{-k}\\right)}\n",
-      "    {\\sqrt{\\frac{\\lambda k}{2}\\left(1-e^{-2k}\\right) + \\lambda^2\\left(1-e^{-k}\\right)^2\\left(k^2\\tau^2-1\\right)^2}} \\\\\n",
-      " &\\approx \\frac{\\lambda}\n",
-      "    {\\sqrt{\\frac{\\lambda k}{2} + \\lambda^2\\left(k^2\\tau^2-1\\right)^2}} \\quad \\text{eliminate terms that go to 0}\\\\\n",
-      " &\\approx \\frac{\\lambda}\n",
-      "    {\\sqrt{\\lambda^2\\left(k^2\\tau^2-1\\right)^2}}  \\quad \\text{squared terms grow faster than linear terms}\\\\\n",
-      " &= \\frac{\\lambda}\n",
-      "    {\\lambda\\left(k^2\\tau^2-1\\right)} \\\\\n",
-      " &= \\frac{1}\n",
-      "    {\\left(k^2\\tau^2-1\\right)} \\\\\n",
+      " &= \\frac{\\lambda}{\\sqrt{\\lambda/2\\tau}} \\\\\n",
+      " &= \\sqrt{2\\lambda\\tau}\n",
       "\\end{aligned}"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "This seems to counteract intuition that SNR grows with input spiking frequency and with synaptic time constant. \n",
-      "\n",
-      "Perhaps there is an error in the math somewhere?"
      ]
     }
    ],
