fix synapse variance and snr math

--- a/synapse_SNR_theory_only.ipynb
+++ b/synapse_SNR_theory_only.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:31ac2215981637ade2b27db4e117cee4a40ea36d430aa779ecaa85862b8b9cfe"
+  "signature": "sha256:ecb2f3a726e6c3224c4d0f5d23c6b12815b262f680a1a9fb32b193b5df2db2d9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -216,7 +216,7 @@
       "  &= E\\left[\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}1\\right]E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] \\\\\n",
       "  &= E\\left[N^2-N\\right]E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] \\\\\n",
       "  &= \\left(E\\left[N^2\\right]-E[N]\\right)E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\right]E\\left[\\frac{1}{\\tau}e^{-t_j/\\tau}\\right]\n",
-      "   \\quad i\\neq j \\text{ so } t_i, t_j \\text{ are independent} \\\\\n",
+      "   \\quad i\\neq j\\ \\text{ so } t_i, t_j \\text{ are independent} \\\\\n",
       "  &= \\left(E\\left[N^2\\right]-E[N]\\right)\\frac{1}{k\\tau}\\left(1-e^{-k}\\right)\\frac{1}{k\\tau}\\left(1-e^{-k}\\right) \\\\\n",
       "  &= \\left(E\\left[N^2\\right]-E[N]\\right)\\frac{1}{k^2\\tau^2}\\left(1-e^{-k}\\right)^2 \\\\\n",
       "\\end{aligned}"
