expand on fpfm encoding transformations
generalize to handle non-square M transformations

--- a/encoding/spike_rate_encoding.ipynb
+++ b/encoding/spike_rate_encoding.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:5ea636d9ee12ae7e5edd239888774861d3258220c50f310a929234ed3dd2204a"
+  "signature": "sha256:365b18e3dc02aac02c5b06d7df8a7e0a060188c6a4ebf991fa6a401bf03fca62"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -54,13 +54,8 @@
       "$$f(x) = f_{max}x$$\n",
       "so\n",
       "$$x = \\frac{f(x)}{f_{max}}$$\n",
-      "where $f_{max}$ is a maximum firing rate used to represent a variable. Implicit in this definition of the maximum firing rate is the assumption that $-1\\le x\\le 1$.  "
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
+      "where $f_{max}$ is a maximum firing rate used to represent a variable. Implicit in this definition of the maximum firing rate is the assumption that $-1\\le x\\le 1$.  \n",
+      "\n",
       "$f_e$ and $f_i$ will then be\n",
       "\n",
       "\\begin{align}\n",
@@ -420,7 +415,16 @@
       "\n",
       "$$\n",
       "x = \\frac{f_p(x)-f_m(x)}{f_{max}}\n",
-      "$$"
+      "$$\n",
+      "\n",
+      "As in the previous encoding schemes, implicit in this definition of the maximum firing rate is the assumption that $-1\\le x\\le 1$.  \n",
+      "\n",
+      "$f_e$ and $f_i$ will then be\n",
+      "\n",
+      "\\begin{align}\n",
+      "f_e(x) &= \\max(\\boldsymbol{e}f_p(x),0) + \\max(-\\boldsymbol{e}f_m(x),0) \\\\\n",
+      "f_i(x) &= \\max(-\\boldsymbol{e}f_p(x),0) + \\max(\\boldsymbol{e}f_m(x),0).\n",
+      "\\end{align}"
      ]
     },
     {
@@ -438,9 +442,13 @@
       "We find $\\boldsymbol{d}_p$ and $\\boldsymbol{d}_m$ such that \n",
       "\n",
       "\\begin{align}\n",
-      "\\boldsymbol{d}_p^T\\boldsymbol{a}(x) &= f_p(g(x)) \\\\\n",
-      "\\boldsymbol{d}_m^T\\boldsymbol{a}(x) &= f_m(g(x)) \\\\\n",
-      "\\end{align}"
+      "\\boldsymbol{d}_p\\boldsymbol{a}(x) &= f_p(g(x)) \\\\\n",
+      "\\boldsymbol{d}_m\\boldsymbol{a}(x) &= f_m(g(x)) \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "As before, if we are not sending to another pool, we can omit encoding $g(x)$ and just find $\\boldsymbol{d}$ such that \n",
+      "\n",
+      "$$\\boldsymbol{d}\\boldsymbol{a}(x)=g(x).$$"
      ]
     },
     {
@@ -489,14 +497,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This means that we cannot train the decode matrices for the function $g(x)$ first and then apply the transformation in the connection but would have to train the decode matrices for $Mg(x)$ in order to correctly encode $Mg(x)$ as input to the target pool. This is a big problem because we would not be able to share a decoding matrix across multiple connections, but would have to find individual decode matrices for each connection! We want to share the decode matrix because its is bigger than a transformation matrix in all practical cases."
+      "This means that we cannot train the decode matrices for the function $g(x)$ first and then apply the transformation in the connection but would have to train the decode matrices for $Mg(x)$ in order to correctly encode $Mg(x)$ as input to the target pool."
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "However, if we cross couple $f_p(x)$ and $f_m(x)$ in the transformation, we can acheive the desired encoding of the transformed input to the target pool. That is, we can find $M_{pp}$, $M_{pm}$, $M_{mp}$, and $M_{mm}$ such that\n",
+      "However, if we cross-couple $f_p(x)$ and $f_m(x)$ in the transformation, we can acheive the desired encoding of the transformed input to the target pool. That is, we can find $M_{pp}$, $M_{pm}$, $M_{mp}$, and $M_{mm}$ such that\n",
       "\n",
       "\\begin{align}\n",
       "f_p(Mg(x)) &= M_{pp}f_p(g(x)) + M_{pm}f_m(g(x)) \\\\\n",
@@ -512,29 +520,19 @@
       "\n",
       "\\begin{align}\n",
       "f_p(Mg(x))&=\\frac{1+Mg(x)}{2}f_{max} + f_{offset} \\\\\n",
-      " &= \\frac{f_{max}}{2}+\\frac{f_{max}g(x)}{2}M + f_{offset}\n",
-      "\\end{align}"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
+      " &= \\frac{f_{max}}{2}+\\frac{f_{max}}{2}Mg(x) + f_{offset}\n",
+      "\\end{align}\n",
+      "\n",
       "For $M_{pp}$ and $M_{pm}$, we have\n",
       "\n",
       "\\begin{align}\n",
       "M_{pp}f_p(g(x)) + M_{pm}f_m(g(x)) &= \n",
       "  M_{pp}\\left(\\frac{1+g(x)}{2}f_{max} + f_{offset}\\right) + M_{pm}\\left(\\frac{1-g(x)}{2}f_{max} + f_{offset}\\right) \\\\\n",
-      " &= \\frac{f_{max}}{2}M_{pp} + \\frac{f_{max}g(x)}{2}M_{pp} + f_{offset}M_{pp} +\n",
-      "    \\frac{f_{max}}{2}M_{pm} - \\frac{f_{max}g(x)}{2}M_{pm} + f_{offset}M_{pm} \\\\\n",
-      " &= \\frac{f_{max}}{2}(M_{pp}+M_{pm})+\\frac{f_{max}g(x)}{2}(M_{pp}-M_{pm})+f_{offset}(M_{pp}+M_{pm})\n",
-      "\\end{align}"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
+      " &= \\frac{f_{max}}{2}M_{pp} + \\frac{f_{max}}{2}M_{pp}g(x) + f_{offset}M_{pp} +\n",
+      "    \\frac{f_{max}}{2}M_{pm} - \\frac{f_{max}}{2}M_{pm}g(x) + f_{offset}M_{pm} \\\\\n",
+      " &= \\frac{f_{max}}{2}(M_{pp}+M_{pm})+\\frac{f_{max}}{2}(M_{pp}-M_{pm})g(x)+f_{offset}(M_{pp}+M_{pm})\n",
+      "\\end{align}\n",
+      "\n",
       "Comparing this to $f_p(Mg(x))$, we see that \n",
       "\n",
       "\\begin{align}\n",
@@ -559,13 +557,8 @@
       "\\begin{align}\n",
       "f_m(Mg(x))&=\\frac{1-Mg(x)}{2}f_{max} + f_{offset} \\\\\n",
       " &= \\frac{f_{max}}{2}-\\frac{f_{max}g(x)}{2}M + f_{offset}\n",
-      "\\end{align}"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
+      "\\end{align}\n",
+      "\n",
       "For $M_{mp}$ and $M_{mm}$, we have\n",
       "\n",
       "\\begin{align}\n",
@@ -573,14 +566,9 @@
       "  M_{mp}\\left(\\frac{1+g(x)}{2}f_{max} + f_{offset}\\right) + M_{mm}\\left(\\frac{1-g(x)}{2}f_{max} + f_{offset}\\right) \\\\\n",
       " &= \\frac{f_{max}}{2}M_{mp} + \\frac{f_{max}g(x)}{2}M_{mp} + f_{offset}M_{mp} +\n",
       "    \\frac{f_{max}}{2}M_{mm} - \\frac{f_{max}g(x)}{2}M_{mm} + f_{offset}M_{mm} \\\\\n",
-      " &= \\frac{f_{max}}{2}(M_{mp}+M_{mm})+\\frac{f_{max}g(x)}{2}(M_{mp}-M_{mm})+f_{offset}(M_{mp}+M_{mm})\n",
-      "\\end{align}"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
+      " &= \\frac{f_{max}}{2}(M_{mp}+M_{mm})+\\frac{f_{max}}{2}(M_{mp}-M_{mm})g(x)+f_{offset}(M_{mp}+M_{mm})\n",
+      "\\end{align}\n",
+      "\n",
       "Comparing this to $f_m(Mg(x))$, we see that \n",
       "\n",
       "\\begin{align}\n",
@@ -590,6 +578,20 @@
       "\n",
       "so,\n",
       "\\begin{align}\n",
+      "M_{mp} &= \\frac{I-M}{2} \\\\\n",
+      "M_{mm} &= \\frac{I+M}{2}\n",
+      "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "**To summarize:**\n",
+      "\n",
+      "\\begin{align}\n",
+      "M_{pp} &= \\frac{I+M}{2} \\\\\n",
+      "M_{pm} &= \\frac{I-M}{2} \\\\\n",
       "M_{mp} &= \\frac{I-M}{2} \\\\\n",
       "M_{mm} &= \\frac{I+M}{2}\n",
       "\\end{align}"
@@ -614,6 +616,89 @@
       " &= \\frac{I-M}{2}f_p(g(x)) + \\frac{I+M}{2}f_m(g(x)) \\\\\n",
       " &= f_m(Mg(x))\n",
       "\\end{align}\n"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 4,
+     "metadata": {},
+     "source": [
+      "fpfm encoding: linear transformations: generalizing to non-square $M$"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "If $M$ isn't square, then the above formulae for $M_{pp}$, $M_{pm}$, $M_{mp}$, and $M_{mm}$ will fail because $I$ is square by definition. However, we can adjust our formulae to accomodate non-square $M$. For an $e\\times d$ dimensional $M$, let's start by making the vector sizes explicit in our encoding scheme:\n",
+      "\n",
+      "\\begin{align}\n",
+      "f_p(g(x)) &= \\frac{f_{max}}{2}\\boldsymbol{1}_d + \\frac{f_{max}}{2}g(x) + f_{offset}\\boldsymbol{1}_d \\\\\n",
+      "f_m(g(x)) &= \\frac{f_{max}}{2}\\boldsymbol{1}_d - \\frac{f_{max}}{2}g(x) + f_{offset}\\boldsymbol{1}_d \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "and\n",
+      "\n",
+      "\\begin{align}\n",
+      "f_p(Mg(x)) &= \\frac{f_{max}}{2}\\boldsymbol{1}_e + \\frac{f_{max}}{2}Mg(x) + f_{offset}\\boldsymbol{1}_e \\\\\n",
+      "f_m(Mg(x)) &= \\frac{f_{max}}{2}\\boldsymbol{1}_e - \\frac{f_{max}}{2}Mg(x) + f_{offset}\\boldsymbol{1}_e \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "where $\\boldsymbol{1}_d$ and $\\boldsymbol{1}_e$ are $1$-dimensional vectors of length $d$ or $e$, respectively. Note the change in dimensionality caused by the introduction of $M$. \n",
+      "\n",
+      "Recall the equations we solved for $M_{pp}$, $M_{pm}$, $M_{mp}$, and $M_{mm}$ with explicit dimensions:\n",
+      "\n",
+      "\\begin{align}\n",
+      "M_{pp}f_p(g(x)) + M_{pm}f_m(g(x)) &= \\ldots \\\\\n",
+      " &= \\frac{f_{max}}{2}(M_{pp}+M_{pm})\\boldsymbol{1}_d+\n",
+      "  \\frac{f_{max}}{2}(M_{pp}-M_{pm})g(x)+\n",
+      "  f_{offset}(M_{pp}+M_{pm})\\boldsymbol{1}_d \\\\\n",
+      "M_{mp}f_p(g(x)) + M_{mm}f_m(g(x)) &= \\ldots \\\\\n",
+      " &= \\frac{f_{max}}{2}(M_{mp}+M_{mm})\\boldsymbol{1}_d+\n",
+      "  \\frac{f_{max}}{2}(M_{mp}-M_{mm})g(x)+\n",
+      "  f_{offset}(M_{mp}+M_{mm})\\boldsymbol{1}_d\n",
+      "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Comparing these with our equations with $f_p(Mg(x))$ and $f_m(Mg(x))$, we see that\n",
+      "\n",
+      "\\begin{align}\n",
+      "(M_{pp}+M_{pm})\\boldsymbol{1}_d &= \\boldsymbol{1}_e \\\\\n",
+      "M_{pp}-M_{pm} &= M \\\\\n",
+      "(M_{mp}+M_{mm})\\boldsymbol{1}_d &= \\boldsymbol{1}_e \\\\\n",
+      "M_{mp}-M_{mm} &= -M. \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "The equations with $M$ are unchanged. The equations relating $\\boldsymbol{1}_d$ to $\\boldsymbol{1}_e$ only imply that the rows of $(M_{pp}+M_{pm})$ and $(M_{mp} + M_{mm})$ sum to 1. Therefore, we can write \n",
+      "\n",
+      "\\begin{align}\n",
+      "M_{pp}+M_{pm} &= \\frac{1}{d}\\boldsymbol{1}_{e\\times d} \\\\\n",
+      "M_{pp}-M_{pm} &= M,\n",
+      "\\end{align}\n",
+      "\n",
+      "and \n",
+      "\n",
+      "\\begin{align}\n",
+      "M_{mp}+M_{mm} &= \\frac{1}{d}\\boldsymbol{1}_{e\\times d} \\\\\n",
+      "M_{mp}-M_{mm} &= -M.\n",
+      "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "so\n",
+      "\\begin{align}\n",
+      "M_{pp} &= \\frac{\\frac{1}{d}\\boldsymbol{1}_{e\\times d} + M}{2}\\\\\n",
+      "M_{pm} &= \\frac{\\frac{1}{d}\\boldsymbol{1}_{e\\times d} - M}{2}\\\\\n",
+      "M_{mp} &= \\frac{\\frac{1}{d}\\boldsymbol{1}_{e\\times d} - M}{2}\\\\\n",
+      "M_{mm} &= \\frac{\\frac{1}{d}\\boldsymbol{1}_{e\\times d} + M}{2}\\\\\n",
+      "\\end{align}"
      ]
     },
     {
