fix fefi equations

--- a/encoding/spike_rate_encoding.ipynb
+++ b/encoding/spike_rate_encoding.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:365b18e3dc02aac02c5b06d7df8a7e0a060188c6a4ebf991fa6a401bf03fca62"
+  "signature": "sha256:87301626428c592347998b020930338edc627c7711074720783478a85af3ba01"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -56,14 +56,18 @@
       "$$x = \\frac{f(x)}{f_{max}}$$\n",
       "where $f_{max}$ is a maximum firing rate used to represent a variable. Implicit in this definition of the maximum firing rate is the assumption that $-1\\le x\\le 1$.  \n",
       "\n",
-      "$f_e$ and $f_i$ will then be\n",
+      "The elements of $f_e(x)$ and $f_i(x)$ will then be\n",
       "\n",
       "\\begin{align}\n",
-      "f_e(x) &= \\max(\\boldsymbol{e}f(x),0) \\quad \\text{(i.e. the positive entries of }\\boldsymbol{e}f(x))\\\\\n",
-      "f_i(x) &= \\max(-\\boldsymbol{e}f(x),0) \\quad \\text{(i.e. the negative entries of }\\boldsymbol{e}f(x)).\n",
+      "f_e(x)_j &= \\sum_{k=0}^{e}\\max(\\boldsymbol{e}_{j,k} f(x)_k,0)\n",
+      "          \\quad \\text{(i.e. sum the positive entries})\\\\\n",
+      "f_i(x)_j &= \\sum_{k=0}^{e}\\max(-\\boldsymbol{e}_{j,k} f(x)_k,0)\n",
+      "          \\quad \\text{(i.e. sum the negative entries})\n",
       "\\end{align}\n",
       "\n",
-      "Note that multiplying $f(x)$ by the encoding matrix, $\\boldsymbol{e}$, is equivalent to encoding $\\boldsymbol{e}x$ as a spike rate:\n",
+      "where $j\\in[0,N-1]$.\n",
+      "\n",
+      "Linear encoding kept simple by the fact that multiplying $f(x)$ by the encoding matrix, $\\boldsymbol{e}$, is equivalent to encoding $\\boldsymbol{e}x$ as a spike rate:\n",
       "\n",
       "\\begin{align}\n",
       "\\boldsymbol{e}f(x) &= \\boldsymbol{e}f_{max}x \\\\\n",
@@ -90,14 +94,7 @@
       "\n",
       "$$\\boldsymbol{d}\\boldsymbol{a}(x)=f(g(x)),$$\n",
       "\n",
-      "which is the spike rate encoded version of $g(x)$ and can be sent as input to another pool via its encoding matrix. That is, the next pool would receive \n",
-      "\n",
-      "\\begin{align}\n",
-      "f_e(x) &= \\max(\\boldsymbol{e}\\boldsymbol{d}\\boldsymbol{a}(x), 0) \\\\\n",
-      "f_i(x) &= \\max(-\\boldsymbol{e}\\boldsymbol{d}\\boldsymbol{a}(x), 0)\n",
-      "\\end{align}\n",
-      "\n",
-      "where $\\boldsymbol{e}$ is the next pool's encoding matrix and $\\boldsymbol{a}(x)$ is the current pool's activity vector.\n",
+      "which is the spike rate encoded version of $g(x)$ and can be sent as input to another pool via its encoding matrix. \n",
       "\n",
       "If we're not decoding to obtain something that will be an input to another pool but rather to send as the output of the network, we can omit encoding $g(x)$ and find $\\boldsymbol{d}$ such that \n",
       "\n",
@@ -231,13 +228,13 @@
       "$$f(x) = xf_{max} + f_{offset}$$\n",
       "and\n",
       "$$x = \\frac{f(x) - f_{offset}}{f_{max}}$$\n",
-      "where $f_{max}$ is the maximum firing rate and $f_{offset}$ is the firing rate offset. The excitatory and inhibitory inputs to a pool will then be\n",
+      "where $f_{max}$ is the maximum firing rate and $f_{offset}$ is the firing rate offset. The elements of $f_e(x)$ and $f_i(x)$ will then be\n",
       "\n",
       "\\begin{align}\n",
-      "f_e(x) &= \\max(\\boldsymbol{e}f(x),0) \\\\\n",
-      " &= \\max(\\boldsymbol{e}xf_{max} + \\boldsymbol{e}f_{offset},0) \\\\\n",
-      "f_i(x) &= \\max(-\\boldsymbol{e}f(x),0) \\\\\n",
-      " &= \\max(-\\boldsymbol{e}xf_{max} - \\boldsymbol{e}f_{offset},0)\n",
+      "f_e(x)_j &= \\sum_{k=0}^{e}\\max\\left(\\boldsymbol{e}_{j,k}f(x)_k\\right)+\\max(\\boldsymbol{e}_{j,k}f_{offset_k},0)\n",
+      "          \\quad \\text{(i.e. sum the positive entries})\\\\\n",
+      "f_i(x)_j &= \\sum_{k=0}^{e}\\max\\left(-\\boldsymbol{e}_{j,k}f(x)_k\\right)+\\max(\\boldsymbol{e}_{j,k}f_{offset_k},0)\n",
+      "          \\quad \\text{(i.e. sum the negative entries})\n",
       "\\end{align}\n",
       "\n",
       "This is fairly similar to the linear case."
@@ -419,11 +416,13 @@
       "\n",
       "As in the previous encoding schemes, implicit in this definition of the maximum firing rate is the assumption that $-1\\le x\\le 1$.  \n",
       "\n",
-      "$f_e$ and $f_i$ will then be\n",
+      "The elements of $f_e(x)$ and $f_i(x)$ will then be\n",
       "\n",
       "\\begin{align}\n",
-      "f_e(x) &= \\max(\\boldsymbol{e}f_p(x),0) + \\max(-\\boldsymbol{e}f_m(x),0) \\\\\n",
-      "f_i(x) &= \\max(-\\boldsymbol{e}f_p(x),0) + \\max(\\boldsymbol{e}f_m(x),0).\n",
+      "f_e(x)_j &= \\sum_{k=0}^e\\max\\left(\\boldsymbol{e}_{j,k} f_p(x)_k, 0\\right) + \n",
+      "            \\max\\left(-\\boldsymbol{e}_{j,k} f_m(x)_k, 0\\right) \\\\\n",
+      "f_i(x)_j &= \\sum_{k=0}^e\\max\\left(-\\boldsymbol{e}_{j,k} f_p(x)_k, 0\\right) + \n",
+      "            \\max\\left(\\boldsymbol{e}_{j,k} f_m(x)_k, 0\\right)\n",
       "\\end{align}"
      ]
     },
