note of fmax's in decode training

--- a/encoding/spike_rate_encoding.ipynb
+++ b/encoding/spike_rate_encoding.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:87301626428c592347998b020930338edc627c7711074720783478a85af3ba01"
+  "signature": "sha256:d4eedd4995b03feb0bdc7ae08a266960ac015d65e72d509202501d96c02afc71"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -92,11 +92,14 @@
      "source": [
       "When computing $g(x)$ to send to another pool, we find a decode matrix, $\\boldsymbol{d}$, such that\n",
       "\n",
-      "$$\\boldsymbol{d}\\boldsymbol{a}(x)=f(g(x)),$$\n",
+      "\\begin{align}\n",
+      "\\boldsymbol{d}\\boldsymbol{a}(x) &= f(g(x)) \\\\\n",
+      " &= f_{max}g(x)\n",
+      "\\end{align}\n",
       "\n",
-      "which is the spike rate encoded version of $g(x)$ and can be sent as input to another pool via its encoding matrix. \n",
+      "which is the spike rate encoded version of $g(x)$ and can be sent as input to another pool via its encoding matrix. Note that each pool can have a different $f_{max}$. The $f_{max}$ used in the decode training is always the receiving pool's $f_{max}$.\n",
       "\n",
-      "If we're not decoding to obtain something that will be an input to another pool but rather to send as the output of the network, we can omit encoding $g(x)$ and find $\\boldsymbol{d}$ such that \n",
+      "If we're not decoding to obtain something that will be an input to another pool but rather to send as the output of the network, we omit encoding $g(x)$ and just find $\\boldsymbol{d}$ such that \n",
       "\n",
       "$$\\boldsymbol{d}\\boldsymbol{a}(x)=g(x).$$"
      ]
