describe handling of multiple inputs

--- a/encoding/spike_rate_encoding.ipynb
+++ b/encoding/spike_rate_encoding.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d4eedd4995b03feb0bdc7ae08a266960ac015d65e72d509202501d96c02afc71"
+  "signature": "sha256:8b542aaf457e97968472e4373a050022e3f56f43ee945cfd64eb6c633d4ea818"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -234,9 +234,9 @@
       "where $f_{max}$ is the maximum firing rate and $f_{offset}$ is the firing rate offset. The elements of $f_e(x)$ and $f_i(x)$ will then be\n",
       "\n",
       "\\begin{align}\n",
-      "f_e(x)_j &= \\sum_{k=0}^{e}\\max\\left(\\boldsymbol{e}_{j,k}f(x)_k\\right)+\\max(\\boldsymbol{e}_{j,k}f_{offset_k},0)\n",
+      "f_e(x)_j &= \\sum_{k=1}^{e}\\max\\left(\\boldsymbol{e}_{j,k}f(x)_k\\right)+\\max(\\boldsymbol{e}_{j,k}f_{offset_k},0)\n",
       "          \\quad \\text{(i.e. sum the positive entries})\\\\\n",
-      "f_i(x)_j &= \\sum_{k=0}^{e}\\max\\left(-\\boldsymbol{e}_{j,k}f(x)_k\\right)+\\max(\\boldsymbol{e}_{j,k}f_{offset_k},0)\n",
+      "f_i(x)_j &= \\sum_{k=1}^{e}\\max\\left(-\\boldsymbol{e}_{j,k}f(x)_k\\right)+\\max(\\boldsymbol{e}_{j,k}f_{offset_k},0)\n",
       "          \\quad \\text{(i.e. sum the negative entries})\n",
       "\\end{align}\n",
       "\n",
@@ -422,9 +422,9 @@
       "The elements of $f_e(x)$ and $f_i(x)$ will then be\n",
       "\n",
       "\\begin{align}\n",
-      "f_e(x)_j &= \\sum_{k=0}^e\\max\\left(\\boldsymbol{e}_{j,k} f_p(x)_k, 0\\right) + \n",
+      "f_e(x)_j &= \\sum_{k=1}^e\\max\\left(\\boldsymbol{e}_{j,k} f_p(x)_k, 0\\right) + \n",
       "            \\max\\left(-\\boldsymbol{e}_{j,k} f_m(x)_k, 0\\right) \\\\\n",
-      "f_i(x)_j &= \\sum_{k=0}^e\\max\\left(-\\boldsymbol{e}_{j,k} f_p(x)_k, 0\\right) + \n",
+      "f_i(x)_j &= \\sum_{k=1}^e\\max\\left(-\\boldsymbol{e}_{j,k} f_p(x)_k, 0\\right) + \n",
       "            \\max\\left(\\boldsymbol{e}_{j,k} f_m(x)_k, 0\\right)\n",
       "\\end{align}"
      ]
@@ -716,6 +716,52 @@
      "metadata": {},
      "source": [
       "Here again, we're going to have to train different decode matrices for different connections if they require normalization."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "fpfm encoding: multiple inputs"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "When a pool has multiple inputs, we expect the inputs to sum. This is equivalent to having transformation matrix summing the inputs. Consider the case in which a pool is receiving $e$-dimensional inputs from $k$ pools. That is, \n",
+      "\n",
+      "\\begin{align}\n",
+      "\\text{input} &= \\sum_{j=1}^kg_j(x) \\\\\n",
+      " &= \\boldsymbol{1}_{1,k}\\ \\boldsymbol{g}(x),\n",
+      "\\end{align}\n",
+      "\n",
+      "so our transformation matrix is $\\boldsymbol{1}_{1,k}$. We know from before that we cannot simply apply the transformation to the encoded inputs because our encoding is nonlinear, so we cross-couple the input $f_p$ and $f_m$ to produce the correct encoding of the summed inputs. That is, we use\n",
+      "\n",
+      "\\begin{align}\n",
+      "f_p'(\\boldsymbol{1}_{1,k}\\boldsymbol{g}(x)) &= \n",
+      "  \\frac{\\frac{1}{k}\\boldsymbol{1}_{1,k}+\\boldsymbol{1}_{1,k}}{2}\\boldsymbol{f}_p(\\boldsymbol{g}(x)) +\n",
+      "  \\frac{\\frac{1}{k}\\boldsymbol{1}_{1,k}-\\boldsymbol{1}_{1,k}}{2}\\boldsymbol{f}_m(\\boldsymbol{g}(x)) \\\\\n",
+      "  &= \\frac{\\frac{1}{k}+1}{2}\\boldsymbol{1}_{1,k}\\boldsymbol{f}_p(\\boldsymbol{g}(x)) +\n",
+      "     \\frac{\\frac{1}{k}-1}{2}\\boldsymbol{1}_{1,k}\\boldsymbol{f}_m(\\boldsymbol{g}(x)) \\\\\n",
+      "  &= \\frac{1+k}{2k}\\boldsymbol{1}_{1,k}\\boldsymbol{f}_p(\\boldsymbol{g}(x)) +\n",
+      "     \\frac{1-k}{2k}\\boldsymbol{1}_{1,k}\\boldsymbol{f}_m(\\boldsymbol{g}(x)) \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "and\n",
+      "\n",
+      "\\begin{align}\n",
+      "f_m'(\\boldsymbol{1}_{1,k}\\boldsymbol{g}(x)) &= \n",
+      "  \\frac{\\frac{1}{k}\\boldsymbol{1}_{1,k}-\\boldsymbol{1}_{1,k}}{2}\\boldsymbol{f}_p(\\boldsymbol{g}(x)) +\n",
+      "  \\frac{\\frac{1}{k}\\boldsymbol{1}_{1,k}+\\boldsymbol{1}_{1,k}}{2}\\boldsymbol{f}_m(\\boldsymbol{g}(x)) \\\\\n",
+      "  &= \\frac{\\frac{1}{k}-1}{2}\\boldsymbol{1}_{1,k}\\boldsymbol{f}_p(\\boldsymbol{g}(x)) +\n",
+      "     \\frac{\\frac{1}{k}+1}{2}\\boldsymbol{1}_{1,k}\\boldsymbol{f}_m(\\boldsymbol{g}(x)) \\\\\n",
+      "  &= \\frac{1-k}{2k}\\boldsymbol{1}_{1,k}\\boldsymbol{f}_p(\\boldsymbol{g}(x)) +\n",
+      "     \\frac{1+k}{2k}\\boldsymbol{1}_{1,k}\\boldsymbol{f}_m(\\boldsymbol{g}(x)) \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "to implement the correct encoding of the summed input to a target pool."
      ]
     }
    ],
