discuss input radius scaling

--- a/encoding/spike_rate_encoding.ipynb
+++ b/encoding/spike_rate_encoding.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:8b542aaf457e97968472e4373a050022e3f56f43ee945cfd64eb6c633d4ea818"
+  "signature": "sha256:291a752656bfb87ec92cd51c5f8f7bb9a0d0e723f1a3ab57aba907207bdc2bd7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -715,7 +715,34 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Here again, we're going to have to train different decode matrices for different connections if they require normalization."
+      "Recall that the fpfm encoding scheme assumes that $-1\\le 1\\le 1$. To adjust the range of $x$ we introduce the radius scaling factor $r$ as\n",
+      "\n",
+      "\\begin{align}\n",
+      "f_{p}(x/r) &= \\frac{1+x/r}{2}f_{max}+f_{offset} \\\\\n",
+      "f_{m}(x/r) &= \\frac{1-x/r}{2}f_{max}+f_{offset}.\n",
+      "\\end{align}\n",
+      "\n",
+      "Here, \n",
+      "\n",
+      "$f_{offset}\\le f_{p_r} \\le f_{max}+f_{offset}$\n",
+      "\n",
+      "and\n",
+      "\n",
+      "$f_{offset}\\le f_{m_r} \\le f_{max}+f_{offset}$ \n",
+      "\n",
+      "when $-r \\le x \\le r$. \n",
+      "\n",
+      "To extract $x$, we use\n",
+      "\n",
+      "\\begin{align}\n",
+      "r\\frac{f_{p_r}(x)-f_{m_r}(x)}{f_{max}} &= \n",
+      "    \\frac{r}{f_{max}}\\left(\\frac{1+x/r}{2}f_{max}+f_{offset}-\\frac{1-x/r}{2}f_{max}-f_{offset}\\right) \\\\\n",
+      " &= \\frac{r}{f_{max}}\\left(\\frac{1+x/r}{2}f_{max}-\\frac{1-x/r}{2}f_{max}\\right) \\\\\n",
+      " &= \\frac{r}{f_{max}}\\left(\\frac{x}{r}f_{max}\\right) \\\\\n",
+      " &= x\n",
+      "\\end{align}\n",
+      "\n",
+      "In practice, input scaling for network inputs can be handled by the computer. Scaling between nodes in the network must be handled like the linear transformations. "
      ]
     },
     {
