remove incorrect fefi

--- a/encoding/spike_rate_encoding.ipynb
+++ b/encoding/spike_rate_encoding.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:291a752656bfb87ec92cd51c5f8f7bb9a0d0e723f1a3ab57aba907207bdc2bd7"
+  "signature": "sha256:22971ca2fdc495ce0c1f5e2ddca09ef65ea4416e82f11087a9874101cdf9c313"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -128,18 +128,7 @@
       "\n",
       "$$M\\boldsymbol{d}\\boldsymbol{a}(x)$$\n",
       "\n",
-      "as input to the encoding matrix of the target pool. The target pool will then recieve\n",
-      "\n",
-      "$$\\boldsymbol{e}M\\boldsymbol{d}\\boldsymbol{a}(x)$$\n",
-      "\n",
-      "or more specifically,\n",
-      "\n",
-      "\\begin{align}\n",
-      "f_e(x) = \\max(\\boldsymbol{e}M\\boldsymbol{d}\\boldsymbol{a}(x), 0) \\\\\n",
-      "f_i(x) = \\max(-\\boldsymbol{e}M\\boldsymbol{d}\\boldsymbol{a}(x), 0)\n",
-      "\\end{align}\n",
-      "\n",
-      "as input. Because $e<N$ and $d<N$ always, it is cheaper in terms of memory requirements to store one decode matrix and multiple transformation matrices than to store a unique decode matrix for each linearly transformed version of the $g(x)$. "
+      "as input to the encoding matrix of the target pool. Because $e<N$ and $d<N$ always, it is cheaper in terms of memory requirements to store one decode matrix and multiple transformation matrices than to store a unique decode matrix for each linearly transformed version of the $g(x)$. "
      ]
     },
     {
